# source-of-truth

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
