[tool.poetry]
name = "source-of-truth"
version = "0.1.0"
description = ""
authors = ["JacquelineGrecco <jacquelinejoy01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gitflow = "^0.5.1"
pytest = "^8.3.4"
logging = "^0.4.9.6"
pyspark = "^3.5.4"
isort = "^5.13.2"
pre-commit = "^4.0.1"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"